--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "fhe-module-ts",
-  "version": "1.0.0",
-  "description": "A Fully Homomorphic Encryption WebAssembly module written in Rust based on a Rust library for lattice-based additive homomorphic encryption with Typescript bindings ",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Preda Mihail Irinel <mihaipreda1997@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "node-seal": "^5.0.0",
-    "typescript": "^4.6.4"
-  }
+    "name": "fhe-module-ts",
+    "version": "1.0.0",
+    "description": "A Fully Homomorphic Encryption WebAssembly module written in Rust based on a Rust library for lattice-based additive homomorphic encryption with Typescript bindings ",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc && node copyScript.js"
+    },
+    "author": "Preda Mihail Irinel <mihaipreda1997@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "node-seal": "^5.0.0",
+        "typescript": "^4.6.4"
+    },
+    "devDependencies": {}
 }
