--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A Fully Homomorphic Encryption WebAssembly module written in Rust based on a Rust library for lattice-based additive homomorphic encryption with Typescript bindings ",
     "main": "index.js",
     "scripts": {
-        "build": "tsc && node copyScript.js"
+        "build": "node copyScript.js && tsc"
     },
     "author": "Preda Mihail Irinel <mihaipreda1997@gmail.com>",
     "license": "MIT",
